load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "binary",
    visibility = ["//dart:__subpackages__"],
    deps = [":providers"],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
    visibility = ["//dart:__subpackages__"],
    deps = [
        "//dart/private/providers:DartPackageConfigInfo",
        "//dart/private/providers:DartPackageResolutionInfo",
        "//dart/private/providers:DartPackageRootInfo",
    ],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//dart:__subpackages__"],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//dart:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//dart:__subpackages__"],
)
