"""Bazel dependencies."""

bazel_dep(
    name = "bazel_skylib",
    version = "1.5.0",
    dev_dependency = True,
)
bazel_dep(
    name = "dev_lurey_rules_dart",
    version = "0.0.0",
    dev_dependency = True,
)
local_path_override(
    module_name = "dev_lurey_rules_dart",
    path = "../..",
)

dart = use_extension("@dev_lurey_rules_dart//dart:extensions.bzl", "dart")
dart.toolchain(
    name = "dart",
    version = "3.3.1",
)
use_repo(dart, "dart_toolchains")

register_toolchains("@dart_toolchains//:all")
