load(
    "@dev_lurey_rules_dart//dart:defs.bzl",
    "dart_binary",
    "dart_packages",
)

package(default_visibility = ["//:__subpackages__"])

dart_binary(
    name = "hello",
    srcs = [
        "lib/message.dart",
    ],
    main = "hello.dart",
    packages = ":packages",
)

dart_packages(
    name = "packages",
    config = ":.dart_tool/package_config.json",
)
