load(
    "@dev_lurey_rules_dart//dart:defs.bzl",
    "dart_binary",
)

package(default_visibility = ["//:__subpackages__"])

dart_binary(
    name = "hello",
    main = "hello.dart",
    deps = [
        "//packages/foo",
    ],
)

sh_test(
    name = "hello_test",
    srcs = ["hello_test.sh"],
    data = [":hello"],
)
