"""Bazel dependencies."""

bazel_dep(
    name = "bazel_skylib",
    version = "1.5.0",
    dev_dependency = True,
)
bazel_dep(
    name = "dev_lurey_rules_dart",
    version = "0.0.0",
    dev_dependency = True,
)
local_path_override(
    module_name = "dev_lurey_rules_dart",
    path = "../..",
)

dart = use_extension("@dev_lurey_rules_dart//dart:extensions.bzl", "dart")
dart.toolchain(
    name = "dart",
    version = "3.3.1",
)
use_repo(dart, "dart_toolchains")

register_toolchains("@dart_toolchains//:all")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "pub_meta",
    urls = ["https://pub.dev/packages/meta/versions/1.12.0.tar.gz"],
    sha256 = "7687075e408b093f36e6bbf6c91878cc0d4cd10f409506f7bc996f68220b9136",
    build_file = "//packages/meta:BUILD.bazel",
    add_prefix = "packages/meta",
)
