"""Bazel dependencies."""

bazel_dep(
    name = "bazel_skylib",
    version = "1.5.0",
    dev_dependency = True,
)
bazel_dep(
    name = "dev_lurey_rules_dart",
    version = "0.0.0",
    dev_dependency = True,
)
local_path_override(
    module_name = "dev_lurey_rules_dart",
    path = "../..",
)

dart = use_extension(
    "@dev_lurey_rules_dart//dart:extensions.bzl",
    "dart",
)
dart.toolchain(
    name = "dart",
    version = "3.3.1",
)
use_repo(dart, "dart_toolchains")

register_toolchains("@dart_toolchains//:all")

pub = use_extension(
    "@dev_lurey_rules_dart//dart/extensions:pub.bzl",
    "pub",
)
pub.package(
    name = "meta",
    build_file = "//third_party:meta.BUILD",
    sha256 = "7687075e408b093f36e6bbf6c91878cc0d4cd10f409506f7bc996f68220b9136",
    version = "1.12.0",
)
use_repo(
    pub,
    "meta",
)
