load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "dart_binary",
    srcs = ["dart_binary.bzl"],
    visibility = ["//dart:__subpackages__"],
    deps = ["//dart/private:providers"],
)

bzl_library(
    name = "dart_library",
    srcs = ["dart_library.bzl"],
    visibility = ["//dart:__subpackages__"],
    deps = ["//dart/private:providers"],
)

bzl_library(
    name = "dart_packages",
    srcs = ["dart_packages.bzl"],
    visibility = ["//dart:__subpackages__"],
    deps = ["//dart/private:providers"],
)
