load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "dart_binary",
    srcs = ["dart_binary.bzl"],
    visibility = ["//dart:__subpackages__"],
    deps = ["//dart/private:providers"],
)

bzl_library(
    name = "dart_library",
    srcs = ["dart_library.bzl"],
    visibility = ["//dart:__subpackages__"],
    deps = ["//dart/private:providers"],
)

bzl_library(
    name = "dart_packages",
    visibility = ["//dart:__subpackages__"],
    deps = ["//dart/private:providers"],
)

bzl_library(
    name = "dart_package_config",
    srcs = ["dart_package_config.bzl"],
    visibility = ["//dart:__subpackages__"],
    deps = ["//dart/private:providers"],
)

bzl_library(
    name = "dart_package_config_gen",
    srcs = ["dart_package_config_gen.bzl"],
    visibility = ["//dart:__subpackages__"],
    deps = ["//dart/private:providers"],
)
